# pki-a22-app

./: .gitignore  .pylintrc  README.md  app copy.py  app.py  app_tkinter.py  cli.py  pip_packages.txt  pyproject copy.toml  pyproject.toml  requirements.txt  test_video.py  test_webrtc.py
.github/workflows/: main.yml
doc/tex/: FH_HaarCascade_Auswertung.aux  FH_HaarCascade_Auswertung.blg  FH_HaarCascade_Auswertung.tex  FH_HaarCascade_Auswertung.toc  FH_streamlit.tex  input_sources.drawio  literatur.bib  main.tex  main.toc  streamlit.tex
pki_a22_app/dashboard/: source_dataset.py  source_upload.py  source_video.py  source_webcam.py  sources.py
pki_a22_app/gui_tkinter/: gui_tkinter.py  gui_tkinter_tests2.py
pki_a22_app/haarcascades/: haarcascades.py
pki_a22_app/utils/: download.py  file_loader.py
tests/: test_pki_a22_app.py
tests/haarcascades/: test_haarcascades.py
tests/utils/: test_file_loader.py
