[tool.poetry]
name = "pki-a22-app"
version = "0.1.0"
description = ""
authors = ["a2-2"]

[tool.poetry.dependencies]
click = "^8.1.3"
opencv-contrib-python = "^4.6.0.66"
matplotlib = "^3.6.2"
python = ">=3.8,<3.9.7 || >3.9.7,<3.11.0 || >=3.12.0,<4.0"
streamlit = "^1.15.1"
streamlit-webrtc = "^0.44.0"
opencv-python-headless = "^4.6.0.66"


[tool.poetry.scripts]
cv-app = "cli:run"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
pytest = "^7.2.0"
watchdog = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
